--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
-<!doctype html>
-<html>
-    <head>
-       <title>장동민의 웹페이지</title>
-       <meta charset="uft-8">
-       <style>
-	#abcd {
- 	   color:red;
-	   font-size:45px
-       </style>
-    </head>
-    <body>
-        <H1>장동민의 웹페이지입니다</h1>
-        <div id="abcd">동해물과 백두산이 마르고 닳도록</div>
-    </body>
-</html>	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+<style>
+#header{
+    background-color:pink;
+}
+#nav{
+    width: 15%;
+    background-color: yellow;
+    float: left;
+}
+#container{
+        width: 85%;
+        background-color:skyblue;
+        float:right;
+}
+#footer{
+    background-color:grey;
+    clear: both;
+}
+</style>
+    <div id="container">
+            <p>아무말</p>
+        </div>
+        <div id="footer">
+            github 주소:아무말
+        </div>
+    
+</body>
+</html>
